Fix horizontal scrolling in small screen lock dialog

--- a/css/_hc.styl
+++ b/css/_hc.styl
@@ -121,6 +121,7 @@ auth0-input-icon($icon)
 
     @media (max-width: $hc-screen-sm-max) {
       align-items center
+      overflow-x hidden
     }
 
     .auth0-lock-view-content
